fix when header is to small, text of logout overflows

--- a/web-app/src/components/Header/Header.scss
+++ b/web-app/src/components/Header/Header.scss
@@ -123,4 +123,8 @@ $headerHeight: 125px;
     width: 100%;
     justify-content: space-between;
   }
+
+  .Header__Menu__Icon {
+    margin: 0 5px;
+  }
 }
